--- a/index.css
+++ b/index.css
@@ -64,6 +64,29 @@
   align-items: center;
   justify-content: center;
 }
+.search-bar {
+    padding-left: 1rem;
+    width: 37rem;
+}
+
+.nav-item{
+    color: #000; 
+    margin-right: 10px;
+}
+
+.login-btn {
+    width: 7rem;
+    display: flex;
+    justify-content: space-between;
+}
+.hower-class{
+    font-size: 1.2rem;
+    color: #000;
+    margin-right: 1rem;
+}
+.hower-class:hover{
+    transform: scale(1.5);
+}
 .home2 {
   position: relative;
   text-shadow: 1px 0 0#fffdfd, 0 1px 0#fffdfd, -1px 0 0#fffdfd, 0-1px 0#fffdfd;
@@ -189,10 +212,12 @@
   z-index: 1;
 }
 .welcome {
+  text-align: center;
   height: 57px;
   font-size: inherit;
 }
 .to-access-account {
+  text-align: center;
   align-self: stretch;
   height: 42px;
   font-size: var(--font-size-17xl);
